# mdlchef

./: .gitignore  Cargo.toml  README.md  formats_gui.py
memeformats/: DrakeYesNo.meme
memeformats/Matrix/: RedPillBluePill.meme
memeformats/Schwarzenegger/: EpicHandshake.meme
memeformats/Spongebob/: BarnacleBoySulphurVision.meme
memeformats/StarWars/: PadmeForTheBetter.meme
src/: create_commands.rs  main.rs  mdl.rs  meme_generator.rs  meme_repository.rs  respond_commands.rs  respond_mdl.rs
