[package]
name = "mdl_chef"
version = "0.1.0"
authors = ["Nikola Bura"]
edition = "2018"
description = "Chefs up memes using MDL (Meme Description Language)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
config = "0.10.1"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
regex = "1"
json5 = "0.3.0"
walkdir = "2"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
#version = "0.10.5"
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "http",
    "cache",
    "unstable_discord_api"
]
